# muscle_mppi

./: .gitignore  .gitmodules  README.md
analysis/: extract_reference.py
mppi/: CMakeLists.txt  mppi_controller.cpp
mppi/control/: base_mppi.cpp  mppi_locomotion.cpp  mppi_locomotion.h
mppi/utils/: tasks.cpp  tasks.h
muscle_mppi/: CMakeLists.txt  mppi_controller.cpp
muscle_mppi/control/: base_mppi.cpp  base_mppi.h  gait_scheduler.cpp  gait_scheduler.h  mppi_locomotion.cpp  mppi_locomotion.h  muscle.h
muscle_mppi/utils/: tasks.cpp  tasks.h  tasks.yaml
ref_free_mppi/: CMakeLists.txt  generate_reference.cpp  ref_free_mppi_controller.cpp
ref_free_mppi/control/: ref_free_mppi.cpp  ref_free_mppi.h
ref_free_mppi/utils/: tasks.cpp  tasks.h
ref_free_mppi_python/: requirements.txt
ref_free_mppi_python/control/: ref_free_mppi.py  tasks.py
ref_free_mppi_python/simulate_python/: run_mppi.py
reference/: ref_activations.csv  ref_activations.npy  ref_torques.csv  ref_torques.npy
